tests/NormalTests/paczka1/small_fuzzy/87347338.err
Error in line 1: A98 A64 69,8
Error in line 3: 6s3fYXqAQDR A556 67,8
Error in line 12: 4LKQi0JFlB A48 44,1
